# ComfyUI-MediaAssetsViewer

./: .gitignore  README.md  __init__.py  preview.html  pyproject.toml
mav_backend/: __init__.py  metadata.py  routes.py  scanner.py
ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: entry.ts  styles.css  types.ts
ui/src/app/: mountApp.ts
ui/src/components/: AssetCard.vue  AssetGrid.vue  AssetLightbox.vue  AssetList.vue  AudioThumb.vue  ContextMenu.vue  FilterBar.vue  MediaAssetsViewer.vue  SelectionBar.vue  VideoThumb.vue
ui/src/composables/: useAssetActions.ts  useAssetSelection.ts  useAssets.ts  useVirtualScroll.ts  useWaveAudioPlayer.ts
ui/src/i18n/: en.json  index.ts  zh-CN.json
